--- a/public/index.html
+++ b/public/index.html
@@ -3,24 +3,22 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Pin-Pics</title>
-		<base href="/" />
-    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"></link>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></link>
-		<link href="stylesheets/awn.css" rel="stylesheet" type="text/css"></link>
-		<link href="stylesheets/main.css" rel="stylesheet" type="text/css"></link>
+		<base href="/">
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link href="/awn.53fad937.css" rel="stylesheet" type="text/css">
+		<link href="/main.6f574124.css" rel="stylesheet" type="text/css">
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  </head>
+  <script src="/awn.53fad937.js"></script><script src="/main.6f574124.js"></script></head>
 	<body>
-		<div id="app" />
-		<script src="bundle.js" type="text/javascript"></script>
-		<script>
-		if ('currentUser' in sessionStorage === false) {
-			$("[data-content]").popover({
-	  		trigger: 'focus'
-			})
-		}
-	</script>
+		<div id="app"></div>
+		<script src="/app.e31bb0bc.js"></script>
+		<script>if ('currentUser' in sessionStorage === false) {
+  $("[data-content]").popover({
+    trigger: 'focus'
+  });
+}</script>
 	</body>
 </html>
